[Feature] breadcrumbs added and styled

--- a/src/components/breadcrumbs/index.scss
+++ b/src/components/breadcrumbs/index.scss
@@ -6,8 +6,8 @@
     padding-bottom: 25px;
     background: var(--primary);
     font-family: sans-serif;
-    margin-top: 3.75rem;
-    height: 20px;
+    margin-top: 4.75rem;
+    height: 30px;
 
     >* {
         display: inline-block;
@@ -16,7 +16,7 @@
 
     a {
         text-decoration: none;
-        color: #fff;
+        color: #000;
 
         &:hover {
             color: #000;
