--- a/src/components/layout/navbar/index.scss
+++ b/src/components/layout/navbar/index.scss
@@ -1,33 +1,33 @@
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    background: #98ddc599 ;
     position: fixed;
     width: 100%;
-    height: 60px;
-    z-index: 9999;
-    top: 0;
     letter-spacing: 3px;
+    margin: 0;
     padding: 0rem 2rem;
-    color: #fff;
     font-family: "Coolvetica";
-    background: var(--primary);
-    box-shadow: var(--global);
     transition: all 0.3s;
-    opacity: 0.95;
     cursor: pointer;
 
     .title {
-        font-size: 34px;
-        padding-top: 15px;
+        font-size: 24px;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-right: 2rem;
     }
 
     .logo {
         display: none;
+        width: 50px;
     }
 
     nav {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        align-items: center;
         gap: 3rem;
         text-align: center;
         padding: 20px 10px;
@@ -43,7 +43,7 @@ header {
         }
 
         .dropdown-content a {
-            color: #fff;
+            color: #000;
             padding: 12px 16px;
             text-decoration: none;
             display: block;
@@ -58,13 +58,12 @@ header {
         a {
             text-align: center;
             line-height: 40px;
-            color: #fff;
             font-size: 20px;
             text-decoration: none;
             transition: all 0.3s;
 
             &:hover {
-                color: #000;
+                color: var(--oposite);
             }
         }
     }
