--- a/src/components/breadcrumbs/index.scss
+++ b/src/components/breadcrumbs/index.scss
@@ -4,10 +4,10 @@
     left: 0;
     padding-left: 55px;
     padding-bottom: 25px;
-    background: var(--primary);
+    background: var(--header);
     font-family: sans-serif;
-    margin-top: 4.75rem;
-    height: 30px;
+    margin-top: 5rem;
+    height: 20px;
 
     >* {
         display: inline-block;
