--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -3,7 +3,7 @@
     will-change: contents;
     transform-style: preserve-3d;
     font-family: "Coolvetica";
-    animation: fadeIn 4s forwards;
+    animation: fadeIn 2s forwards;
     color: #000;
     .home-page,
     .about-page,
@@ -12,20 +12,16 @@
     .single-service,
     .policy-page {
         h1 {
-            
-            
             margin: 0;
         }
 
         h2 {
-           
-            
             margin: 0;
         }
 
         p {
             font-size: 18px;
-            font-family: sans-serif;
+            font-family: "Roboto";
             font-weight: 900;
             min-width: fit-content;
             font-weight: 600;
@@ -42,7 +38,7 @@
     font-size: 28px;
     padding: 10px;
     margin: 0;
-    background: #9d9d9d;
+    background:var(--oposite);
     border-radius: 20% 0% 0% 20%;
     width: 50px;
     height: 50px;
