--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -1,12 +1,12 @@
 button {
     text-transform: capitalize;
     letter-spacing: 4px;
-    font-family: sans-serif;
-    font-weight: 600;
+    font-family: "Roboto";
+    font-weight: bold;
     text-decoration: none;
     text-align: center;
     width: 200px;
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 5px;
     border: none;
     box-shadow: var(--button-shadow);
