--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   --secondary: #98DDC5;
   --oposite: #DD98B0;
   --header: #98ddc599;
-  --global-shadow: 0px 20px 40px 5px rgba(0, 0, 0, 0.7);
+  --page-shadow: 0px 8px 12px 0px rgba(0,0,0, 0.25) ;
+  --global-shadow: 0px 8px 40px 3px rgba(0, 0, 0, 0.7);
   --button-shadow: 8px 8px 12px rgba(0, 0, 0, 0.4);
 }
 
@@ -14,7 +15,7 @@
 }
 
 #root {
-  padding-bottom: 10px;
+  background: var(--primary);
 }
 
 a {
