--- a/src/components/layout/footer/index.scss
+++ b/src/components/layout/footer/index.scss
@@ -30,7 +30,9 @@ footer {
         border: 1px solid var(--oposite);
     }
 
-    
+    .iconList {
+        margin: 0 3rem 0  0 ;
+    }
 
     .copy-container {
         display: flex;
@@ -38,6 +40,7 @@ footer {
         justify-content: center;
         position: relative;
         top: 25%;
+        margin: 0 3rem 0 0 ;
 
         .small-print {
             display: flex;
