--- a/src/components/pages/Home/index.scss
+++ b/src/components/pages/Home/index.scss
@@ -63,6 +63,10 @@
                     display: flex;
                     flex-direction: column;
                     gap: 1rem;
+                    &:hover {
+                        transform: scale(1.02);
+                        transition: all ease-in-out;
+                    }
                 }
 
                 .card-image {
@@ -87,6 +91,9 @@
 
                     a {
                         color: var(--oposite);
+                        &:hover {
+                            color: var(--secondary);
+                        }
                     }
                 }
             }
