--- a/src/components/layout/navbar/index.scss
+++ b/src/components/layout/navbar/index.scss
@@ -2,7 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: var(--header);
+    background: var(--secondary);
     position: fixed;
     width: 100%;
     top: 0;
@@ -37,13 +37,14 @@ header {
         .dropdown-content {
             display: none;
             position: absolute;
-            padding: 2rem 1rem;
-            top: 131%;
-            left: 0%;
-            width: 100%;
-            background: var(--header);
+            padding: 1rem;
+            top: 60%;
+            left: 30%;
+            background: var(--secondary);
             box-shadow: var(--global);
         }
+
+        
 
         .dropdown-content a {
             color: #000;
@@ -53,7 +54,8 @@ header {
             text-align: left;
         }
 
-        .dropdown:hover .dropdown-content {
+        .dropdown:hover 
+        .dropdown-content {
             display: block;
             animation: fadeIn 1s forwards;
         }
@@ -61,7 +63,7 @@ header {
         a {
             text-align: center;
             line-height: 40px;
-            font-size: 20px;
+            font-size: 1.1rem;
             text-decoration: none;
             transition: all 0.3s;
 
@@ -70,11 +72,6 @@ header {
             }
         }
     }
-}
-
-.navbar-scroll {
-    opacity: 0;
-    transition: 1s ease-in-out;
 }
 
 .mobile-icon,
