--- a/src/components/breadcrumbs/index.scss
+++ b/src/components/breadcrumbs/index.scss
@@ -4,7 +4,7 @@
     left: 0;
     padding-left: 55px;
     padding-bottom: 25px;
-    background: var(--header);
+    background: var(--secondary);
     font-family: sans-serif;
     margin-top: 5rem;
     height: 20px;
