--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -23,7 +23,7 @@
         }
 
         p {
-            font-size: 125%;
+            font-size: 18px;
             font-family: "Roboto";
             min-width: fit-content;
             font-weight: 500;
