--- a/src/components/pages/singleSubject/index.module.css
+++ b/src/components/pages/singleSubject/index.module.css
@@ -8,7 +8,7 @@
 
 .hero {
     padding: 6rem 4rem;
-    
+    box-shadow: none;
 }
 
 .innerHero {
@@ -35,13 +35,19 @@ hr {
 img {
     width: 300px;
 }
-
+.buttonContainer {
+    display: flex;
+    margin-top: 3rem;
+    padding: 0;
+    gap: 50px;
+}
 .secondSection {
     display: flex;
     gap: 50px;
-    margin: 3rem 0;
+    margin: 2rem 0;
     padding: 4rem;
     background: var(--secondary);
+    box-shadow: none;
 }
 
 .left {
@@ -57,7 +63,26 @@ img {
     padding: 2rem;
     width: 50%;
 }
-
+.thirdSection {
+    display: flex;
+    gap: 50px;
+    margin: 2rem 0;
+    padding: 4rem;
+    box-shadow: none;
+    background: var(--primary);
+}
+.thirdLeft {
+    background: var(--secondary);
+    box-shadow: var(--global-shadow);
+    padding: 2rem;
+    width: 50%;
+}
+.thirdRight {
+    background: var(--secondary);
+    box-shadow: var(--global-shadow);
+    padding: 2rem;
+    width: 50%;
+}
 .anim {
     animation: zoomIn 0.5s forwards;
 }
