[Feature] subjects, tuition and resources page created

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,24 +1,32 @@
 @import "animate.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @font-face {
-    font-family: "Coolvetica";
-    src: url("./assets/fonts/CoolveticaRg-Regular.woff") format("woff");
+  font-family: "Coolvetica";
+  src: url("./assets/fonts/CoolveticaRg-Regular.woff") format("woff");
 }
 
 @import "loaders.css/src/animations/ball-spin-fade-loader.scss";
 
+.loader-hidden {
+  display: none;
+}
+
 .loader-active {
-    position: absolute;
-    display: block;
-    z-index: 99999;
-    top: 12%;
-    right: 0;
-    left: 0;
-    margin: auto;
-    bottom: 0;
-    width: 50px;
-    height: auto;
-    animation: fadeOut 0.5s;
-    animation-fill-mode: forwards;
+  display: block;
+}
+
+.loader-active {
+  position: absolute;
+  display: block;
+  z-index: 99999;
+  top: 12%;
+  right: 0;
+  left: 0;
+  margin: auto;
+  bottom: 0;
+  width: 50px;
+  height: auto;
+  animation: fadeOut 0.5s;
+  animation-fill-mode: forwards;
 }
