--- a/src/components/layout/navbar/index.scss
+++ b/src/components/layout/navbar/index.scss
@@ -1,149 +1,153 @@
 header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--secondary);
+  width: 100%;
+  height: 85px;
+  letter-spacing: 3px;
+  margin: 0;
+  padding: 0rem 2rem;
+  font-family: "Coolvetica";
+  transition: all 0.3s;
+  cursor: pointer;
+
+  .title-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background: var(--secondary);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    letter-spacing: 3px;
-    margin: 0;
-    padding: 0rem 2rem;
-    font-family: "Coolvetica";
-    transition: all 0.3s;
-    cursor: pointer;
+    gap: 10px;
+    padding-top: 5px;
+    margin-left: 2rem;
+  }
 
-    .title {
-        font-size: 24px;
-        font-weight: bold;
-        text-transform: uppercase;
-        margin-right: 2rem;
+  .title {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: capitalize;
+    margin-right: 2rem;
+  }
+
+  .logo {
+    width: 250px;
+    height: 100px;
+    border-radius: 10px;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 3rem;
+    text-align: center;
+    padding: 20px 10px;
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      padding: 1rem;
+      top: 60%;
+      left: 30%;
+      background: var(--secondary);
+      box-shadow: var(--global);
     }
 
-    .logo {
-        display: none;
-        width: 50px;
+    .dropdown-content a {
+      color: #000;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
     }
 
-    nav {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        gap: 3rem;
-        text-align: center;
-        padding: 20px 10px;
-
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            padding: 1rem;
-            top: 60%;
-            left: 30%;
-            background: var(--secondary);
-            box-shadow: var(--global);
-        }
-
-        
-
-        .dropdown-content a {
-            color: #000;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown:hover 
-        .dropdown-content {
-            display: block;
-            animation: fadeIn 1s forwards;
-        }
-
-        a {
-            text-align: center;
-            line-height: 40px;
-            font-size: 1.1rem;
-            text-decoration: none;
-            transition: all 0.3s;
-
-            &:hover {
-                color: var(--oposite);
-            }
-        }
+    .dropdown:hover .dropdown-content {
+      display: block;
+      animation: fadeIn 1s forwards;
     }
+
+    a {
+      text-align: center;
+      line-height: 40px;
+      font-size: 1.1rem;
+      text-decoration: none;
+      transition: all 0.3s;
+
+      &:hover {
+        color: var(--oposite);
+      }
+    }
+  }
 }
 
 .mobile-icon,
 .hamburger,
 .close-icon {
-    display: none;
+  display: none;
 }
 
 @media screen and (max-width: 920px) {
-    header {
-        padding: 0rem;
+  header {
+    padding: 0rem;
 
-        .title {
-            display: none;
-        }
-
-        .logo {
-            display: block;
-            margin-top: 0px;
-            width: 75px;
-        }
-
-        nav {
-            display: none;
-        }
-
-        nav {
-            position: absolute;
-            top: 5px;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            background: var(--primary);
-            padding-top: 30px;
-            padding-right: 40px;
-            gap: 2rem;
-            z-index: 2;
-            margin: 0;
-
-            .text {
-                display: none;
-            }
-
-            .mobile-icon {
-                display: flex;
-            }
-
-            &.mobile-show {
-                display: flex;
-                justify-content: space-evenly;
-                padding-bottom: 15px;
-                height: 60px;
-                animation: bounceInRight 1s;
-            }
-        }
+    .title {
+      display: none;
     }
 
-    .navbar-scroll {
+    .logo {
+      display: block;
+      margin-top: 0px;
+      width: 75px;
+    }
+
+    nav {
+      display: none;
+    }
+
+    nav {
+      position: absolute;
+      top: 5px;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background: var(--primary);
+      padding-top: 30px;
+      padding-right: 40px;
+      gap: 2rem;
+      z-index: 2;
+      margin: 0;
+
+      .text {
         display: none;
-    }
+      }
 
-    .hamburger {
-        display: block;
-        position: absolute;
-        top: 20px;
-        right: 35px;
-    }
+      .mobile-icon {
+        display: flex;
+      }
 
-    .close-icon {
-        display: block;
-        position: absolute;
-        right: 25px;
-        top: 0;
+      &.mobile-show {
+        display: flex;
+        justify-content: space-evenly;
+        padding-bottom: 15px;
+        height: 60px;
+        animation: bounceInRight 1s;
+      }
     }
+  }
+
+  .navbar-scroll {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 35px;
+  }
+
+  .close-icon {
+    display: block;
+    position: absolute;
+    right: 25px;
+    top: 0;
+  }
 }
