--- a/src/components/pages/singleSubject/index.module.css
+++ b/src/components/pages/singleSubject/index.module.css
@@ -1,91 +1,97 @@
 @import "animate.css";
 
 .single-subject {
-    position: relative;
-    margin: 0;
-    padding: 6rem 0rem;
+  position: relative;
+  margin: 0;
+  padding: 6rem 0rem;
 }
 
 .hero {
-    padding: 6rem 4rem;
-    box-shadow: none;
+  padding: 6rem 4rem;
+  box-shadow: none;
 }
 
 .innerHero {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
 }
 
 .textbox {
-    margin-top: 2rem;
-    animation: fadeInLeft 2s forwards;
+  margin-top: 2rem;
+  animation: fadeInLeft 2s forwards;
 }
 
 hr {
-    border: 1px solid var(--oposite);
-    margin: 3rem 0rem 2rem;
+  border: 1px solid var(--oposite);
+  margin: 3rem 0rem 2rem;
 }
 
 .imgContainer {
-    margin-top: 5rem;
-    animation: fadeInRight 2s forwards;
+  margin-top: 5rem;
+  animation: fadeInRight 2s forwards;
 }
 
 img {
-    width: 300px;
+  width: 300px;
 }
 .buttonContainer {
-    display: flex;
-    margin-top: 3rem;
-    padding: 0;
-    gap: 50px;
+  display: flex;
+  margin-top: 3rem;
+  padding: 0;
+  gap: 50px;
 }
 .secondSection {
-    display: flex;
-    gap: 50px;
-    margin: 2rem 0;
-    padding: 4rem;
-    background: var(--secondary);
-    box-shadow: none;
+  display: flex;
+  gap: 50px;
+  margin: 2rem 0;
+  padding: 4rem;
+  background: var(--secondary);
+  box-shadow: none;
 }
 
 .left {
-    background: var(--primary);
-    box-shadow: var(--global-shadow);
-    padding: 2rem;
-    width: 50%;
+  background: var(--primary);
+  box-shadow: var(--global-shadow);
+  padding: 2rem;
+  width: 50%;
 }
 
 .right {
-    background: var(--primary);
-    box-shadow: var(--global-shadow);
-    padding: 2rem;
-    width: 50%;
+  background: var(--primary);
+  box-shadow: var(--global-shadow);
+  padding: 2rem;
+  width: 50%;
 }
 .thirdSection {
-    display: flex;
-    gap: 50px;
-    margin: 2rem 0;
-    padding: 4rem;
-    box-shadow: none;
-    background: var(--primary);
+  display: flex;
+  gap: 50px;
+  margin: 2rem 0;
+  padding: 4rem;
+  box-shadow: none;
+  background: var(--primary);
 }
 .thirdLeft {
-    background: var(--secondary);
-    box-shadow: var(--global-shadow);
-    padding: 2rem;
-    width: 50%;
+  background: var(--secondary);
+  box-shadow: var(--global-shadow);
+  padding: 2rem;
+  width: 50%;
 }
 .thirdRight {
-    background: var(--secondary);
-    box-shadow: var(--global-shadow);
-    padding: 2rem;
-    width: 50%;
+  background: var(--secondary);
+  box-shadow: var(--global-shadow);
+  padding: 2rem;
+  width: 50%;
 }
-.anim {
-    animation: zoomIn 0.5s forwards;
+.animLeft {
+  animation: slideInLeft 1s forwards;
+}
+.animRight {
+  animation: slideInRight 1s forwards;
+}
+.animSecond {
+  animation: zoomIn 1s forwards;
 }
 .none {
-    opacity: 0;
+  opacity: 0;
 }
