--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 :root {
   --primary: #fff;
-  --secondary: #98DDC5;
-  --oposite: #DD98B0;
+  --secondary: #98ddc5;
+  --oposite: #dd98b0;
   --header: #98ddc599;
-  --page-shadow: 0px 8px 12px 0px rgba(0,0,0, 0.25) ;
+  --button-default: #eeeeee;
+  --page-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
   --global-shadow: 0px 8px 40px 3px rgba(0, 0, 0, 0.7);
   --button-shadow: 8px 8px 12px rgba(0, 0, 0, 0.4);
 }
