--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
   --oposite: #dd98b0;
   --header: #98ddc599;
   --button-default: #eeeeee;
-  --page-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
-  --global-shadow: 0px 8px 40px 3px rgba(0, 0, 0, 0.7);
-  --button-shadow: 8px 8px 12px rgba(0, 0, 0, 0.4);
+  --page-shadow: 3px 10px 12px rgba(0, 0, 0, 0.25);
+  --global-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+  --button-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
 }
 
 * {
