[Feature] mobile styles

--- a/src/components/CTA/index.scss
+++ b/src/components/CTA/index.scss
@@ -2,13 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 4rem 0;
+  margin: 4rem;
   padding: 2rem 1rem;
+  background: var(--primary);
   box-shadow: var(--global-shadow);
 
   .text-container {
-    width: 50%;
-
     .cta-title {
       margin: 0;
       padding: 0rem 4rem;
@@ -16,7 +15,6 @@
     }
 
     .cta-p {
-      font-family: sans-serif;
       font-weight: 600;
       margin: 2rem 4rem;
     }
@@ -33,34 +31,25 @@
 }
 
 @media screen and (max-width: 430px) {
-  .cta {
-    min-height: 500px;
+  .call-to-action {
     flex-direction: column;
-    justify-content: initial;
-    gap: 2rem;
+    align-items: center;
+    margin: 2rem 0;
+    padding: 1rem;
 
     .text-container {
-      width: 100%;
-
       .cta-title {
-        padding: 2rem;
-        font-size: 1.5rem;
-        text-align: center;
-      }
-
-      .cta-p {
-        font-family: sans-serif;
-        margin: 0rem;
-        padding: 0 2rem;
-        font-size: 14px;
-        text-align: center;
+        padding: 0rem 2rem;
+        font-size: 24px;
       }
     }
 
     .btn-container {
-      width: 100%;
-      max-height: 50px;
-      margin: 0;
+      padding: 0 1rem;
+      gap: 2rem;
+    }
+    button {
+      width: 150px;
     }
   }
 }
