--- a/src/components/pages/Contact/index.scss
+++ b/src/components/pages/Contact/index.scss
@@ -1,14 +1,15 @@
 .contact-page {
   display: flex;
   justify-content: space-between;
-  padding-top: 2rem;
+  padding-top: 0rem;
+  background: var(--primary);
 
   .text-box {
     display: flex;
     flex-direction: column;
     width: 50%;
     color: #000;
-    margin: 6rem 4rem;
+    margin: 1rem 4rem;
     animation: fadeInLeft 2s forwards;
     box-shadow: none;
   }
@@ -100,9 +101,9 @@
   top: 120px;
   right: 30px;
   z-index: 99999;
-  width: 300px;
+  width: 325px;
   padding: 20px;
-  color: #fff;
+  color: #000;
   font-family: "Coolvetica";
   text-align: center;
   font-size: 18px;
@@ -115,10 +116,10 @@
     font-size: 14px;
     display: block;
     padding-top: 20px;
-    color: #fff;
+    color: #000;
     a {
       text-transform: lowercase;
-      color: #fff;
+      color: #000;
     }
   }
 }
@@ -127,7 +128,6 @@
   background: rgba(154, 154, 154, 0.2);
   float: right;
   width: 49%;
-  margin-top: 5rem;
   animation: backInRight 1s 1s;
   opacity: 0;
   animation-fill-mode: forwards;
