--- a/src/components/Cards/Resource-cards/index.scss
+++ b/src/components/Cards/Resource-cards/index.scss
@@ -1,34 +1,42 @@
 .cardContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, auto));
-    row-gap: 50px;
-    column-gap: 50px;
-    padding: 1rem 3rem;
-    justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, auto));
+  row-gap: 50px;
+  column-gap: 50px;
+  padding: 1rem 0rem;
+  justify-content: space-around;
 
-    .resourceCard  {
-        display: flex;
-        flex-flow: column wrap;
-        align-items: center;
-        text-align: center;
-        gap: 20px;
-        max-width: 500px;
-        border: 1px solid;
-        border-radius: 10px;
-        padding: 2rem 3rem;
-        background: var(--secondary);
+  .resourceCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+    max-width: 500px;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 2rem 3rem;
+    background: var(--secondary);
 
-        &:hover {
-            transform: scale(1.05);
-        }
-
-        .icon {
-            width: 100px;
-
-        }
-
-        button {
-            width: 300px;
-        }
+    &:hover {
+      transform: scale(1.05);
     }
+
+    .icon {
+      width: 100px;
+    }
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .cardContainer {
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    row-gap: 20px;
+    padding: 1rem 2rem;
+
+    .resourceCard {
+      gap: 20px;
+      padding: 2rem 3rem;
+    }
+  }
 }
