--- a/src/components/Cards/subjects-card/index.scss
+++ b/src/components/Cards/subjects-card/index.scss
@@ -2,21 +2,40 @@
   display: flex;
   justify-content: space-around;
 
-  .card {
-    max-width: 400px;
-    padding: 0;
-    margin: 0;
+  .subjectCard {
+    width: 400px;
+    &:hover {
+      transform: scale(1.1);
+    }
 
     .title {
-      background: var(--secondary);
       padding: 1rem;
       text-align: center;
+      margin: 0;
     }
   }
 
   .cardImg {
-    object-fit: cover;
-    width: 400px;
-    height: 400px;
+    width: inherit;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .card-container {
+    display: flex;
+    flex-direction: column;
+
+    .subjectCard {
+      width: 300px;
+      .title {
+        padding: 1rem;
+        text-align: center;
+        margin: 0;
+      }
+    }
+
+    .cardImg {
+      max-width: inherit;
+    }
   }
 }
