--- a/src/components/layout/footer/index.scss
+++ b/src/components/layout/footer/index.scss
@@ -18,9 +18,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     margin: 0rem;
-    font-size: 14px;
-
-
+    font-size: 16px;
 
     a {
       cursor: pointer;
@@ -59,36 +57,36 @@ footer {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 920px) {
   footer {
-    height: 225px;
-    width: 100%;
-
-    .foot-title {
-      font-size: 14px;
+    .logo {
+      width: 50px;
+      height: auto;
     }
 
-    .link-container {
-      gap: 5px;
-      margin: 0 10px;
-      font-size: 12px;
+    .links {
+      font-size: 10px;
+    }
 
-      ul {
-        padding: 0;
+    hr {
+      margin: 1rem;
+    }
+
+    .iconList {
+      margin: 0;
+    }
+
+    .copy-container {
+      gap: 20px;
+      margin: 0;
+
+      .small-print {
+        gap: 14px;
       }
-    }
 
-    .socials-container {
-      width: 30%;
-      margin: 10px;
-      padding: 10px;
-      font-size: 12px;
-    }
-
-    .copy {
-      font-size: 8px;
-      text-align: right;
-      margin-top: 5px;
+      .copy {
+        font-size: 10px;
+      }
     }
   }
 }
