--- a/src/components/pages/Resources/index.scss
+++ b/src/components/pages/Resources/index.scss
@@ -1,7 +1,25 @@
 .table-page {
-    margin: 4rem;
+  .hero {
+    margin-bottom: 4rem;
+    padding: 1rem 4rem 4rem;
+    background: var(--primary);
+    box-shadow: var(--page-shadow);
+  }
 
-  
+  .table {
+    height: 80vh;
+    padding: 0 4rem;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
+    transition: all ease;
+  }
+
+  .second-section {
+    margin: 2rem 0;
+    padding: 4rem;
+    background: var(--secondary);
+  }
 }
 
-
+@media screen and (max-width: 920px) {
+}
