--- a/src/components/pages/Resources/main-page/index.scss
+++ b/src/components/pages/Resources/main-page/index.scss
@@ -1,7 +1,59 @@
 .resources-page {
-    margin: 4rem;
-    opacity: 0;
-    animation: fadeIn 2s forwards;
-    
+  .hero {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
+    padding: 1rem 4rem 4rem;
+    box-shadow: var(--page-shadow);
+    background: var(--secondary);
+
+    .textbox {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      max-width: 50%;
+      margin-bottom: 1rem;
+
+      .hero-title {
+        opacity: 0;
+        animation: fadeInLeft 3s forwards;
+      }
+
+      p,
+      .button-container {
+        opacity: 0;
+        animation: fadeInUp 3s forwards;
+      }
+
+      .button-container {
+        display: flex;
+        gap: 50px;
+      }
+    }
+  }
+  .resource-cards {
+    padding: 1rem 4rem;
+  }
 }
 
+@media screen and (max-width: 920px) {
+  .resources-page {
+    .hero {
+      padding: 1rem 4rem 1rem;
+
+      .textbox {
+        max-width: 100%;
+        margin-bottom: 2rem;
+
+        .button-container {
+          display: flex;
+          gap: 20px;
+        }
+      }
+    }
+    .resource-cards {
+      padding: 1rem 0rem;
+    }
+  }
+}
