--- a/src/components/pages/Subjects/index.scss
+++ b/src/components/pages/Subjects/index.scss
@@ -1,12 +1,56 @@
 .subjects-page {
-  margin: 0;
-  padding: 2rem;
-  .hero-title {
-    padding-left: 1rem;
+  .hero {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
+    padding: 1rem 4rem 4rem;
+    box-shadow: var(--page-shadow);
+    background: var(--secondary);
+
+    .textbox {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      max-width: 50%;
+      margin-bottom: 1rem;
+
+      .hero-title {
+        opacity: 0;
+        animation: fadeInLeft 3s forwards;
+      }
+
+      p,
+      .button-container {
+        opacity: 0;
+        animation: fadeInUp 3s forwards;
+      }
+
+      .button-container {
+        display: flex;
+        gap: 50px;
+      }
+    }
   }
 
-  .hero {
-    animation: zoomIn 0.5s forwards;
-    
+  .subject-cards {
+    padding: 1rem 4rem;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .subjects-page {
+    .hero {
+      padding: 1rem 4rem 1rem;
+      .textbox {
+        max-width: 100%;
+        margin-bottom: 2rem;
+
+        .button-container {
+          display: flex;
+          gap: 20px;
+        }
+      }
+    }
   }
 }
